public/css/gsdk.css
/* ... */
#explore-thumbnails img {
	width:100%;
	height:auto;
}
.japan-cuisine {
  position: relative;
}
.cuisine-content {
	position: absolute;
	top:10pt;
	width:100%;
	height:100%;
}
.cuisine-text {
    width: 73%;
}
.cuisine-text p {
  color: #fff;
  font-size: 14px;
}
h5.branch-title {
	font-family: 'UTM Avo Bold', Arial, sans-serif;
	font-size:11pt;
}
.home-contact {
	margin-bottom: 30pt;
}
.home-contact ul {
    padding-left: 20px;
}
.office-wrap {
    padding: 10px;
    border: 1px solid #666;
}
.office-row {
	margin-top:10pt;
}
.sale-info img {
    width: 70px;
    height: 70px;
}
.sale-info {
    position: absolute;
    top: 0;
    right: 15px;
    z-index: 10;
}
h3.sale-text {
	color: #003aa0;
}
h3.sale-text strong {
	color:#f00;
}
#all-tours {
	margin:20pt auto;
}
#all-tours .tours-grid {
	margin-top:0;
}
.form-group .error {
    color: #f00;
}
form#registration-init-form .form-control {
    font-size: 12px;
    height: 35px;
}
.header-banner {
		height: 350px;
		background-size: 100% 100%;
		position: relative;
}
.header-banner.all-tours-banner,
.header-banner.home-banner {
		height: 450px;
}
.header-banner.short-banner {
	height:285px;
}
body > .navbar-collapse::after {
    background-color: #b33a3a;
}
body > .navbar-collapse .nav > li {
    border-bottom: 1px solid #e7eafa;
}
body > .navbar-collapse .navbar-nav > li > a, body > .navbar-collapse .navbar-nav > li > a:hover, body > .navbar-collapse .navbar-nav > li > a:focus, body > .navbar-collapse .navbar-nav .open .dropdown-menu > li > a, body > .navbar-collapse .navbar-nav .open .dropdown-menu > li > a:hover, body > .navbar-collapse .navbar-nav .open .dropdown-menu > li > a:focus {
	opacity:1;
}
@media screen and (min-width: 768px) {
  .navbar-right {
      float: right!important;
      margin-right: -15px;
      margin-top: 10px;
  }
  .carousel-caption {
    left: auto;
    right: auto;
  }
  .carousel-indicators {
    bottom: 0;
  }
	.tour-card-title h4.title, .card-user.card-tour.normal-tour h4.title {
		font-size:12pt;
	}
}
@media screen and (max-width: 991px) {
	.summary-card {
    margin-top: 20pt;
	}
	form#registration-init-form .form-control {
		margin-bottom:5px;
	}
	.form-group {
    margin-bottom: 0;
	}
	.header-banner {
		height: 351px;
		background-size: cover;
	}
	div#featured-tours .tours-grid {
		margin-top:0;
	}
	div#featured-tours .tours-grid > div[class^="col"] {
    margin-top: 30px;
	}
	.cuisine-content {
    position: relative;
    top: 0;
    width: 100%;
    height: auto;
	}
	.cuisine-text {
		width:100%;
	}
	.cuisine-text p {
		color:#666
	}
	.row.office-row > div[class^="col-"] {
    margin-bottom: 15px;
	}
}
@media screen and (max-width: 820px) {
	.navbar .navbar-nav > li > a {
	    margin: 10px 0;
	}
}
@media screen and (max-width: 767px) {
	.nav>li {
    margin: 0;
	}
	.navbar-transparent {
	    padding-top: 10px;
	    background-color: #fff;
	    margin-bottom: 0px;
	}
	.navbar-transparent .navbar-toggle .icon-bar, [class*="navbar-ct"] .navbar-toggle .icon-bar {
    background-color: #3057a0 !important;
	}
	.header-banner {
		height: 450px;
	}
	.header-banner.all-tours-banner,
	.header-banner.home-banner {
		height: 450px;
	}
	.header-banner.short-banner {
    background-position: center;
	}
	.tour-meta .info.info-horizontal {
		text-align: left;
		width: 70%;
		margin: auto;
	}
	.tour-meta .icon.icon-transparent.icon-sm {
		display: inline-block;
    float: none;
    margin-top: 0px;
    width: auto;
    height: auto;
	}
	.tour-meta .info-horizontal .description {
		display: inline-block;
    padding-top: 0px;
    line-height: 30px;
		overflow: visible;
	}
	.tour-meta .info-horizontal .description h5 {
		margin-top: 10px;
    display: block;
    margin-bottom: auto;
	}
	h1.tour-title, .tours-title {
		height:50px;
	}
	.carousel-caption {
		padding-bottom:40px;
	}
	.tour-tabs > li a {
		font-size:10pt;
	}
}
@media screen and (max-width: 640px) {
	.card-user.card-tour.normal-tour .image {
		height:220px;
	}
}
@media screen and (max-width: 515px) {
	.card-user.card-tour.normal-tour .image {
		height:170px;
	}
}
@media screen and (max-width: 499px) {
	h1.tour-title, .tours-title {
		height:70px;
	}
}

